# stock_machine_learning

./: .gitignore  MEMO.md  README.md  advisor.py  analyze_drawdown.py  analyze_probabilities.py  analyze_stoploss.py  analyze_volfilter.py  config.py  main.py  main_4h.py  main_4h_dynamic.py  pyproject.toml  simulate_detailed.py  test_trigger_order.py  trader.py
backtest/: engine.py
cache/: all_prices.csv  positions_4h.json  top_coins.json  trade_log.jsonl
cache/models/4h/: config.json  ensemble_0.keras  ensemble_1.keras  ensemble_2.keras  ensemble_3.keras  ensemble_4.keras  ensemble_5.keras  ensemble_6.keras  ensemble_7.keras  ensemble_8.keras  ensemble_9.keras
data/: collector.py  collector_4h.py  preprocessor.py  ticker_discovery.py
models/: lstm_model.py
output_4h_dynamic/: output.txt  simulation_detail.csv
output_4h_dynamic_dynamic_tickers/: output.txt
